# ic-captcha

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  gen_candid.sh  index.html  package-lock.json  package.json  vite.config.ts
canisters/backend/: Cargo.toml  backend.did
canisters/backend/src/: image_gen.rs  lib.rs  random_value.rs  utils.rs
src/: App.css  App.tsx  store.ts
src/declarations/backend/: backend.did.d.ts  backend.did.js  index.js
