[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.15.0"
ic-cdk-timers = "0.9.0"
ic-stable-structures = "0.6.5"
candid = "0.10.10"
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2.15", features = ["custom"] }
rand = { version = "0.8.5", features = ["getrandom"] }
serde_json = "1.0.122"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.23"
rusttype = "0.9.3"
base64 = "0.21"
